--- a/modules/ROOT/partials/configuration/convert_unsafe_embeds_options.adoc
+++ b/modules/ROOT/partials/configuration/convert_unsafe_embeds_options.adoc
@@ -1,26 +1,5 @@
-[[sandbox-iframes-option]]
-==== `sandbox_iframes` option
-
-This option controls whether the editor will add a `sandbox=""` attribute to all `<iframe>` elements. This will restrict the iframe’s embedded resource from performing potentially malicious actions including scripting, file downloads, browser popups, passing the same-origin policy, among others. Reference: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/iframe#sandbox[MDN].
-
-*Type:* `+Boolean+`
-
-*Possible values:* `true`, `false`
-
-*Default value:* `false`
-
-===== Example: using `sandbox_iframes` option
-
-[source,js]
-----
-tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  sandbox_iframes: true
-});
-----
-
 [[convert-unsafe-embeds]]
-==== `convert_unsafe_embeds` option
+== `convert_unsafe_embeds` option
 
 This option controls whether an `<object>` and `<embed>` elements will be converted to more restrictive alternatives, namely `<img>` for image MIME types, `<video>` for video MIME types, `<audio>` for audio MIME types, or `<iframe>` for other or unspecified MIME types. 
 
@@ -32,7 +11,7 @@ When converted to `<img>`, `<video>`, or `<audio>`, this prevents the embedded r
 
 *Default value:* `true`
 
-===== Example: using `convert_unsafe_embeds` option
+=== Example: using `convert_unsafe_embeds` option
 
 [source,js]
 ----
