--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -35,7 +35,7 @@ The following new Premium plugins where released alongside {productname} 7.0.
 
 === Import Word
 
-The new Premium plugin, **Import Word** provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
+The new Premium plugin, **Import from Word** provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
 
 include::partial$misc/admon-paid-addon-pricing.adoc[]
 
