--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -33,7 +33,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 The following new Premium plugins where released alongside {productname} 7.0.
 
-=== Import Word
+=== Import from Word
 
 The new Premium plugin, **Import from Word** provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
 
