--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -39,23 +39,23 @@ The new Premium plugin, **Import from Word** provides a way to import `.docx` (W
 
 include::partial$misc/admon-paid-addon-pricing.adoc[]
 
-For information on the **Import Word Premium Plugin** see xref:importword.adoc[Import Word docs].
+For information on the **Import from Word Premium Plugin** see xref:importword.adoc[Import from Word docs].
 
-=== Export Word
+=== Export to Word
 
-The new Premium plugin, **Export Word** feature lets you generate a `.docx` file directly from the editor.
-
-include::partial$misc/admon-paid-addon-pricing.adoc[]
-
-For information on the **Export Word Premium Plugin** see xref:exportword.adoc[Export Word docs].
-
-=== Export PDF
-
-The new Premium plugin, **Export PDF** feature lets you generate a `PDF` file directly from the editor.
+The new Premium plugin, **Export to Word** feature lets you generate a `.docx` file directly from the editor.
 
 include::partial$misc/admon-paid-addon-pricing.adoc[]
 
-For information on the **Export PDF Premium Plugin** see xref:exportpdf.adoc[Export PDF docs].
+For information on the **Export to Word Premium Plugin** see xref:exportword.adoc[Export to Word docs].
+
+=== Export to PDF
+
+The new Premium plugin, **Export to PDF** feature lets you generate a `.pdf` file directly from the editor.
+
+include::partial$misc/admon-paid-addon-pricing.adoc[]
+
+For information on the **Export to PDF Premium Plugin** see xref:exportpdf.adoc[Export to PDF docs].
 
 
 [[new-open-source-plugin]]
