--- a/modules/ROOT/partials/plugin-apis/exportpdf-apis.adoc
+++ b/modules/ROOT/partials/plugin-apis/exportpdf-apis.adoc
@@ -1,1 +1,1 @@
-For a comprehensive overview of the API documentation regarding the Export to PDF Premium plugin, please visit https://exportpdf.converter.tiny.cloud/docs[Export to PDF.]
+For a comprehensive overview of the API documentation regarding the Export to PDF Premium plugin, please visit https://exportpdf.converter.tiny.cloud/docs[Export to PDF.^]
