--- a/modules/ROOT/partials/plugin-apis/importword-apis.adoc
+++ b/modules/ROOT/partials/plugin-apis/importword-apis.adoc
@@ -1,1 +1,1 @@
-For a comprehensive overview of the API documentation regarding the Import Word Premium plugin, please visit https://importdocx.converter.tiny.cloud/docs#section/Import-from-Word[Import from Word.]
+For a comprehensive overview of the API documentation regarding the Import Word Premium plugin, please visit https://importdocx.converter.tiny.cloud/docs#section/Import-from-Word[Import from Word.^]
