--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -31,7 +31,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 [[new-premium-plugins]]
 == New Premium plugins
 
-The following new Premium plugins where released alongside {productname} 7.0.
+The following new Premium plugins were released alongside {productname} 7.0.
 
 === Import from Word
 
