--- a/modules/ROOT/pages/custom-basic-toolbar-button.adoc
+++ b/modules/ROOT/pages/custom-basic-toolbar-button.adoc
@@ -17,6 +17,9 @@ include::partial$misc/admon-predefined-icons-only.adoc[]
 |enabled |boolean |optional |default: `true` - Represents the button's state. When `false`, the button is unclickable. Toggled by the button's API.
 |onSetup |`+(api) => (api) => void+` |optional |default: `+() => () => {}+` - Function invoked when the button is rendered. For details, see: xref:using-onsetup[Using `+onSetup+`].
 |onAction |`+(api) => void+` |required |Function invoked when the button is clicked.
+4+|
+include::partial$misc/admon-requires-7.0v.adoc[]
+|shortcut |string |optional |Shortcut to display in the tooltip. To register a shortcut, see: To register a shortcut, see: xref:shortcuts.adoc[Add custom shortcuts to TinyMCE].
 |===
 
 == API
