--- a/modules/ROOT/pages/custom-view.adoc
+++ b/modules/ROOT/pages/custom-view.adoc
@@ -1,5 +1,5 @@
 = Custom View
-:navtitle: Custom View
+:navtitle: Custom view
 :description: How to create a custom view in TinyMCE.
 :keywords: view, UI, addView
 
