--- a/modules/ROOT/pages/custom-view.adoc
+++ b/modules/ROOT/pages/custom-view.adoc
@@ -1,4 +1,4 @@
-= Custom View
+= Custom view
 :navtitle: Custom view
 :description: How to create a custom view in TinyMCE.
 :keywords: view, UI, addView
