--- a/modules/ROOT/partials/commands/exportpdf-cmds.adoc
+++ b/modules/ROOT/partials/commands/exportpdf-cmds.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|exportPDF |Generates a PDF file directly from the editor with the filename `document-name.pdf`.
+|ExportPDF |Generates a PDF file directly from the editor with the filename `document-name.pdf`.
 |===
 
 .Example
