--- a/modules/ROOT/partials/configuration/exportpdf.adoc
+++ b/modules/ROOT/partials/configuration/exportpdf.adoc
@@ -1,7 +1,7 @@
 [[exportpdf-service-url]]
 == `exportpdf_service_url`
 
-By default, the Export to PDF feature uses the {productname} Cloud Services HTML to DOCX converter service to generate the `document-name.pdf` files. You can use this option to provide the URL to an on-premises converter. https://www.tiny.cloud/contact/[Contact us] if you require this feature.
+By default, the Export to PDF feature uses the {productname} Cloud Services HTML to PDF converter service to generate the `document-name.pdf` files. You can use this option to provide the URL to an on-premises converter. https://www.tiny.cloud/contact/[Contact us] if you require this feature.
 
 *Type:* `+String+`
 
