--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -35,7 +35,7 @@ include::partial$module-loading/bundling-plugins-that-cant-bundle.adoc[]
 ** xref:full-screen[Full Screen (fullscreen)]
 ** xref:help[Help (help)]
 ** xref:image[Image (image)]
-** xref:enhanced-image-editing[Image Editing (editimage)]
+** xref:image-editing[Image Editing (editimage)]
 ** xref:import-css[Import CSS (importcss)]
 ** xref:insert-datetime[Insert Date/Time (insertdatetime)]
 ** xref:link[Link (link)]
