--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -329,7 +329,7 @@ The following commands require the xref:directionality.adoc[Directionality (`+di
 include::partial$commands/directionality-cmds.adoc[leveloffset=+3]
 
 
-[[imageediting]]
+[[editimage]]
 ==== Image Editing
 
 The following commands require the xref:editimage.adoc[Image Editing (`+editimage+`)] plugin.
