--- a/modules/ROOT/pages/exportpdf.adoc
+++ b/modules/ROOT/pages/exportpdf.adoc
@@ -3,7 +3,7 @@
 :description: The export to PDF feature lets you generate a PDF file directly from the editor.
 :description_short: Generate a PDF file directly from the editor.
 :keywords: plugin, exportpdf
-:pluginname: Export PDF
+:pluginname: Export to PDF
 // values for <tier>
 // opensource plugin = tieroneplan
 // premium plugin    = tiertwoplan or tierthreeplan or enterpriseplan
