--- a/modules/ROOT/partials/menu-item-ids/exportpdf-menu-items.adoc
+++ b/modules/ROOT/partials/menu-item-ids/exportpdf-menu-items.adoc
@@ -1,5 +1,5 @@
 [cols="1,1,2",options="header"]
 |===
 |Menu item identifier |xref:menus-configuration-options.adoc#example-the-tinymce-default-menu-items[Default Menu Location] |Description
-|`+exportpdf+` |Export PDF |Generates a PDF file directly from the editor.
+|`+exportpdf+` |Export to PDF |Generates a PDF file directly from the editor.
 |===
