--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -7,7 +7,7 @@
 * xref:introduction-to-tiny-comments.adoc[Comments]
 * xref:editimage.adoc[Enhanced Image Editing]
 * xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
-* xref:exportpdf.adoc[Export PDF]
+* xref:exportpdf.adoc[Export to PDF]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
 * xref:inline-css.adoc[Inline CSS]
