--- a/modules/ROOT/partials/configuration/exportpdf.adoc
+++ b/modules/ROOT/partials/configuration/exportpdf.adoc
@@ -78,7 +78,7 @@ tinymce.init({
 ----
 
 [NOTE]
-To use this option, the Export PDF plugin requires the `exportpdf_service_url` option to be configured.
+The `exportpdf_service_url` option must be configured for the {pluginname} plugin to work.
 
 
 === Limitations of the `<placeholder>` option
