DOC-2266: copy edits, removal of demo.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -306,7 +306,7 @@
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:advtable.adoc[Enhanced Tables]
 *** xref:export.adoc[Export]
-*** xref:exportpdf.adoc[Export PDF]
+*** xref:exportpdf.adoc[Export to PDF]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
 *** xref:inline-css.adoc[Inline CSS]
