--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -124,7 +124,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Export PDF
+:pluginname: Export to PDF
 :plugincode: exportpdf
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
