--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -226,7 +226,7 @@ Commands are available for the following plugins:
 * xref:directionality[Directionality]
 * xref:editimage[Enhanced Image Editing]
 * xref:emoticons[Emoticons]
-* xref:exportpdf[Export PDF]
+* xref:exportpdf[Export to PDF]
 * xref:footnotes[Footnotes]
 * xref:formatpainter[Format Painter]
 * xref:fullscreen[Full Screen]
@@ -345,9 +345,9 @@ The following commands require the xref:emoticons.adoc[Emoticons (`+emoticons+`)
 include::partial$commands/emoticons-cmds.adoc[leveloffset=+3]
 
 [[export-pdf]]
-==== Export PDF
+==== Export to PDF
 
-The following commands require the xref:exportpdf.adoc[Export PDF (`+exportpdf+`)] plugin.
+The following commands require the xref:exportpdf.adoc[Export to PDF (`+exportpdf+`)] plugin.
 
 include::partial$commands/exportpdf-cmds.adoc[leveloffset=+3]
 
