--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -77,7 +77,7 @@ Export content from {productname} into various formats.
 
 a|
 [.lead]
-xref:exportpdf.adoc[Export PDF]
+xref:exportpdf.adoc[Export to PDF]
 
 Export and generate content from {productname} into `document.pdf` format.
 
