--- a/modules/ROOT/pages/content-filtering.adoc
+++ b/modules/ROOT/pages/content-filtering.adoc
@@ -15,6 +15,8 @@ include::partial$configuration/convert_fonts_to_spans.adoc[]
 
 include::partial$configuration/custom_elements.adoc[]
 
+include::partial$configuration/improved_custom_elements.adoc[]
+
 include::partial$configuration/convert_unsafe_embeds.adoc[]
 
 include::partial$configuration/doctype.adoc[]
