--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -404,6 +404,7 @@
 **** xref:7.0-release-notes.adoc#improvements[Improvements]
 **** xref:7.0-release-notes.adoc#additions[Additions]
 **** xref:7.0-release-notes.adoc#changes[Changes]
+**** xref:7.0-release-notes.adoc#removed[Removed]
 **** xref:7.0-release-notes.adoc#bug-fixes[Bug fixes]
 **** xref:7.0-release-notes.adoc#security-fixes[Security fixes]
 **** xref:7.0-release-notes.adoc#deprecated[Deprecated]
