--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -87,11 +87,11 @@ The {productname} <x.y[.z]> release includes an accompanying release of the **<P
 
 For information on the **<Premium plugin name 1>** plugin, see: xref:<plugincode>.adoc[<Premium plugin name 1>].
 
-=== Advanced Templates
+=== Advanced Templates 7.0
 
 The {productname} 7.0 release includes an accompanying release of the **Advanced Templates** premium plugin.
 
-**Advanced Templates** 3.1.0 includes the following fixes, additions, and improvements.
+**Advanced Templates** 7.0 includes the following fixes, additions, and improvements.
 
 ==== Missing tooltip for category and template three dots menu button in the **Advanced Templates** dialog
 
