--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -1,4 +1,4 @@
-= Template plugin
+= Templates plugin
 :navtitle: Template
 :description: Create and edit complex templates in {productname} for use with {productname}.
 :description_short: Create templates.
