--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -325,7 +325,7 @@
 **** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
 *** xref:autocorrect.adoc[Spelling Autocorrect]
 *** xref:tableofcontents.adoc[Table of Contents]
-*** xref:advanced-templates.adoc[Template]
+*** xref:advanced-templates.adoc[Templates]
 *** Tiny Drive
 **** xref:tinydrive-introduction.adoc[Introduction]
 **** xref:tinydrive-getting-started.adoc[Getting started]
