--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -143,7 +143,7 @@ Add autocorrection of common typos and spelling errors as well as capitalization
 
 a|
 [.lead]
-xref:advanced-templates.adoc[Template]
+xref:advanced-templates.adoc[Templates]
 
 Create and edit complex templates in {productname} for use with {productname}.
 
