--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -225,7 +225,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Template
+:pluginname: Templates
 :plugincode: advtemplate
 :pluginpage: advanced-templates.adoc
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
