--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -125,7 +125,7 @@ For users who work with a fixed template list that does not require modification
 The following interactive predefined list example provides guidance for this approach.
 
 [[predefined-list-config-example]]
-==== Configuring the Template plugin to use a static list of predefined templates.
+==== Configuring the Templates plugin to use a static list of predefined templates.
 
 liveDemo::{plugincode}-predefined[]
 
