DOC-2268: various copy edits, fixes and removal of demo files.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -305,7 +305,7 @@
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:export.adoc[Export]
-*** xref:exportword.adoc[Export Word]
+*** xref:exportword.adoc[Export to Word]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
 *** xref:inline-css.adoc[Inline CSS]
