--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -106,7 +106,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Export Word
+:pluginname: Export to Word
 :plugincode: exportword
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
