--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -129,7 +129,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Export Word
+:pluginname: Export to Word
 :plugincode: exportword
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
