--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -77,7 +77,7 @@ Export content from {productname} into various formats.
 
 a|
 [.lead]
-xref:exportword.adoc[Export Word]
+xref:exportword.adoc[Export to Word]
 
 Exports editor content from into `.docx` file format to local disk.
 
