--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -12,7 +12,7 @@ include::partial$module-loading/bundling-plugins-that-cant-bundle.adoc[]
 ** xref:enhanced-image-editing[Enhanced Image Editing (editimage)]
 ** xref:enhanced-media-embed[Enhanced Media Embed (mediaembed)]
 ** xref:export[Export (export)]
-** xref:exportword[Export Word (exportword)]
+** xref:exportword[Export to Word (exportword)]
 ** xref:footnotes[Footnotes (footnotes)]
 ** xref:format-painter[Format Painter (formatpainter)]
 ** xref:link-checker[Link Checker (linkchecker)]
