--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -8,7 +8,7 @@
 * xref:editimage.adoc[Enhanced Image Editing]
 * xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 * xref:export.adoc[Export]
-* xref:exportword.adoc[Export Word]
+* xref:exportword.adoc[Export to Word]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
 * xref:inline-css.adoc[Inline CSS]
