--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -386,9 +386,9 @@ The following command requires the xref:image.adoc[Image (`+image+`)] plugin.
 include::partial$commands/image-cmds.adoc[leveloffset=+3]
 
 [[import-word]]
-==== Import Word
+==== Import from Word
 
-The following command requires the xref:importword.adoc[Import Word (`+importword+`)] plugin.
+The following command requires the xref:importword.adoc[Import from Word (`+importword+`)] plugin.
 
 include::partial$commands/importword-cmds.adoc[leveloffset=+3]
 
