--- a/modules/ROOT/partials/commands/importword-cmds.adoc
+++ b/modules/ROOT/partials/commands/importword-cmds.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|ImportWord |Imports `.docx` or `.dotx` files into the editor.
+|ImportWord |Opens a file picker, that allows content from either a `.docx` or `.dotx` file to be imported into the editor.
 |===
 
 .Example
