DOC-2267: copy edits, removal of demo.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -308,7 +308,7 @@
 *** xref:export.adoc[Export]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
-*** xref:importword.adoc[Import Word]
+*** xref:importword.adoc[Import from Word]
 *** xref:inline-css.adoc[Inline CSS]
 *** xref:linkchecker.adoc[Link Checker]
 *** xref:mentions.adoc[Mentions]
