--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -95,7 +95,7 @@ Turn {productname} documents into single files with inline CSS, ready, in partic
 
 a|
 [.lead]
-xref:importword.adoc[Import Word]
+xref:importword.adoc[Import from Word]
 
 Import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
 
