--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -145,7 +145,7 @@ a|
 [.lead]
 xref:advanced-templates.adoc[Templates]
 
-Create and edit complex templates in {productname} for use with {productname}.
+Create and edit complex templates in {productname}.
 
 a|
 [.lead]
