--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -136,7 +136,7 @@ If the intention is for the template list to be end-user modifiable, the {plugin
 The following interactive remote storage configuration example provides guidance on configuring the {pluginname} plugin to support user-modifiable template lists.
 
 [[remote-config-example]]
-==== Configuring the Template plugin to interact with a remote backend service via REST API.
+==== Configuring the Templates plugin to interact with a remote backend service via REST API.
 
 liveDemo::{plugincode}[]
 
