--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -2,7 +2,7 @@
 :navtitle: Template
 :description: Create and edit complex templates in {productname} for use with {productname}.
 :description_short: Create templates.
-:keywords: plugin, Template, templates, advtemplate.
+:keywords: plugin, template, templates, advtemplate.
 :pluginname: Templates
 :plugincode: advtemplate
 :plugincategory: premium
