DOC-2300: rename `Enhanced Image Editing` with `Image Editing` for TinyMCE 7.0 (#3122)
* DOC-2300: rename enhanced image editing with image editing for tinymce 7.0.

* Update modules/ROOT/pages/troubleshoot-server.adoc

* Update modules/ROOT/partials/module-loading/bundling-plugin-files.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update modules/ROOT/pages/editor-command-identifiers.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* DOC-2300: update image editing in placement in editor-command-identifiers.adoc.

---------

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -224,13 +224,13 @@ Commands are available for the following plugins:
 * xref:codesample[Code Sample]
 * xref:comments[Comments]
 * xref:directionality[Directionality]
-* xref:editimage[Enhanced Image Editing]
 * xref:emoticons[Emoticons]
 * xref:footnotes[Footnotes]
 * xref:formatpainter[Format Painter]
 * xref:fullscreen[Full Screen]
 * xref:help[Help]
 * xref:image[Image]
+* xref:editimage[Image Editing]
 * xref:insertdatetime[Insert Date/Time]
 * xref:link[Link]
 * xref:lists[Lists]
@@ -328,14 +328,6 @@ The following commands require the xref:directionality.adoc[Directionality (`+di
 
 include::partial$commands/directionality-cmds.adoc[leveloffset=+3]
 
-
-[[editimage]]
-==== Enhanced Image Editing
-
-The following commands require the xref:editimage.adoc[Enhanced Image Editing (`+editimage+`)] plugin.
-
-include::partial$commands/editimage-cmds.adoc[leveloffset=+3]
-
 [[emoticons]]
 ==== Emoticons
 
@@ -377,6 +369,13 @@ include::partial$commands/help-cmds.adoc[leveloffset=+3]
 The following command requires the xref:image.adoc[Image (`+image+`)] plugin.
 
 include::partial$commands/image-cmds.adoc[leveloffset=+3]
+
+[[editimage]]
+==== Image Editing
+
+The following commands require the xref:editimage.adoc[Image Editing (`+editimage+`)] plugin.
+
+include::partial$commands/editimage-cmds.adoc[leveloffset=+3]
 
 [[insertdatetime]]
 ==== Insert Date/Time
