--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -299,7 +299,6 @@
 **** xref:comments-embedded-mode.adoc[Embedded mode]
 **** xref:comments-toolbars-menus.adoc[Toolbar buttons and menu items]
 **** xref:comments-commands-events-apis.adoc[Commands, Events and APIs]
-*** xref:editimage.adoc[Enhanced Image Editing]
 *** Enhanced Media Embed
 **** xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
@@ -308,6 +307,7 @@
 *** xref:export.adoc[Export]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
+*** xref:editimage.adoc[Image Editing]
 *** xref:inline-css.adoc[Inline CSS]
 *** xref:linkchecker.adoc[Link Checker]
 *** xref:mentions.adoc[Mentions]
